feat: refactor AI and genetic trainer for improved readability and performance